# mypubsub-rust-program

./: Cargo.toml  Dockerfile_pub-rabbitmq  Dockerfile_sub-rabbitmq  README.md  run-tests.sh
src/: pubapp.rs  subapp.rs
src/conn/: mod.rs
